<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/author_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author" />

    <TextView
        android:id="@+id/series_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series_name" />

    <TextView
        android:id="@+id/salesDate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salesDate" />
</LinearLayout>